Bug 197452 - [HTML 4 Conformance] Proper support for optgroup disabled
Summary: [HTML 4 Conformance] Proper support for optgroup disabled
Status: VERIFIED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.2.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords: testcase
Depends on:
Blocks:
 
Reported: 2009-06-22 03:24 UTC by Gérard Talbot (no longer involved)
Modified: 2010-09-30 22:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gérard Talbot (no longer involved) 2009-06-22 03:24:40 UTC
Version:            (using KDE 4.2.4)
OS:                Linux
Installed from:    Ubuntu Packages

This bug should be marked as dependent of bug 76489.

"if an optgroup is disabled, [then] all option children are disabled too"
bug 76489 comment #8

Testcase:
http://www.gtalbot.org/BrowserBugsSection/Konqueror4Bugs/optgroup-disabled.html

Testcase coming from
http://www.robinlionheart.com/stds/html4/forms 

Expected results: options D and F in the provided testcase should not be focusable and should not be selectable

regards, Gérard
Comment 1 Maksim Orlovich 2010-04-05 00:30:28 UTC
SVN commit 1111139 by orlovich:

- Fix inheritance of disabled from optgroup
- Actually show stuff as properly disabled in listbox mode

... Let's see if combos can be convinced w/o going nuts

BUG: 197452
CCBUG: 76489


 M  +18 -5     render_form.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1111139
Comment 2 Gérard Talbot (no longer involved) 2010-09-30 22:04:33 UTC
I get expected results with Konqueror 4.5.1 (Qt: 4.7.0). Thank you Maksim! :)

Marking as VERIFIED

regards, Gérard