- Fix inheritance of disabled from optgroup - Actually show stuff as properly disabled in listbox mode

... Let's see if combos can be convinced w/o going nuts

BUG: 197452
CCBUG: 76489

svn path=/trunk/KDE/kdelibs/; revision=1111139